2008-04-17  David Wetzel <dave@turbocat.de>
        GSWeb.framework/GSWConstants.m
        * remove comment

2008-04-15  David Wetzel <dave@turbocat.de>
        GSWeb.framework/GSWConstants.m
        GSWExtensions.framework/GSWExtWOCompatibility.h
        * make WOSessionCreationError work with WO names 
        (maybe we can change the SED script to be 100% compatible?, does that matter?)
 
2008-04-09  David Wetzel <dave@turbocat.de>
        GSWAdaptors/Apache2/mod_gsw.c
        * small cleanups
        * copy all non-private headers to user

        GSWeb.framework/GSWBindingNameAssociation.m
        * remove unused code

2008-03-31  David Wetzel <dave@turbocat.de>
        GSWAdaptors/Apache2/mod_gsw.c
        * make load-balancing work
        * add refusing to app status

        GSWeb.framework/GSWApplication.m
        GSWeb.framework/GSWRequestHandler.h
        GSWeb.framework/GSWComponentRequestHandler.h
        GSWeb.framework/GSWComponentRequestHandler.m
        GSWeb.framework/GSWResponse.m
        GSWeb.framework/GSWConstants.h
        GSWeb.framework/GSWConstants.m
        GSWeb.framework/GSWPrivate.h
        GSWeb.framework/GSWApplication.h
        * rewrote GSWComponentRequestHandler to make refusing work
       
2008-03-17  David Wetzel <dave@turbocat.de>
        GSWeb.framework/GSWAssociation.h/m
        + bindingInComponent

        GSWeb.framework/GSWPrivate.h
        + _setValueNoValidation: inComponent: 

        GSWeb.framework/GSWBindingNameAssociation.m
        * re-wrote initWithKeyPath:

	GSWAdaptors/Apache2/mod_gsw.c
        * various fixes

2008-03-11  David Wetzel <dave@turbocat.de>
        GSWAdaptors/Apache2/mod_gsw.c
        * fixed http status bug

2008-03-10  David Wetzel <dave@turbocat.de>
        GSWAdaptors/Apache2/mod_gsw.c
        * use shared memory to share application statistics across httpd processes
        * first version of load balancing

2008-03-09  David Ayers  <ayers@fsfe.org>
