@@ -1,3 +1,7 @@
+2008-04-20  David Wetzel <dave@turbocat.de>
+        GSWeb.framework/GSWApplication.m
+        * cleanups
+
 2008-04-17  David Wetzel <dave@turbocat.de>
         GSWeb.framework/GSWConstants.m
         * remove comment
